--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.julyss2019.bukkit.plugins</groupId>
     <artifactId>JulyGuild</artifactId>
-    <version>2.1.1</version>
+    <version>2.1.2</version>
 
     <properties>
         <!-- 防止中文乱码 -->
@@ -117,7 +117,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.4.1</version>
                 <configuration>
-                    <appendAssemblyId>false</appendAssemblyId>
+                    <appendAssemblyId>true</appendAssemblyId>
                     <!-- get all project dependencies -->
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>com.github.julyss2019.bukkit.plugins</groupId>
             <artifactId>JulyLibrary</artifactId>
-            <version>2.0.6</version>
+            <version>2.1.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -212,6 +212,7 @@
             <groupId>com.scireum</groupId>
             <artifactId>parsii</artifactId>
             <version>1.5</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
